# WindowCaster

./: .gitignore  README.md  WindowCaster.sln
.github/workflows/: ms_build.yaml  rust_build.yaml
Server/: Server.cpp  Server.vcxproj  network_server.cpp  network_server.h  renderer.cpp  renderer.h  window_manager.cpp  window_manager.h  windowcaster.pb.cc  windowcaster.pb.h
client/: Cargo.toml  build.rs
client/src/: app.rs  cli.rs  interactive.rs  main.rs  network.rs  proto.rs  ui.rs  video.rs  window.rs
proto/: windowcaster.proto
