[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "WindowCaster 客户端 - 远程窗口渲染工具"


[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
ffmpeg-next = "7.1.0"
bincode = "1.3"

[build-dependencies]
protobuf-codegen = "3.4"
